--- a/style.css
+++ b/style.css
@@ -5,5 +5,27 @@ body{
 }
 
 .wrapper {
-    background-color: #abacab;
+    background-color: #2F4F4F;
+}
+
+.time-block {
+  font-size: 20px;
+  width: 150px;
+  color: red;
+  padding: 15px;
+  font-weight: normal;
+  text-align: center;
+
+}
+
+.timerLine {
+  background-color: #DAA520;
+  width: 100%;
+  height: 25px;
+  transition: 0.3s;
+
+}
+
+button {
+  ma
 }
