--- a/style.css
+++ b/style.css
@@ -1,31 +1,39 @@
 body{
   margin: 0;
   font-family: 'Roboto';
-  background-color: #E0FFFF	;
+  background-color: #DEB887	;
 }
 
 .timerLine {
-  background-color: #DAA520;
+  background-color: #A52A2A;
   width: 100%;
   height: 25px;
   transition: 0.3s;
 
 }
 
-.wrapper {
-    background-color: #2F4F4F;
+.cover {
+    background-color: #A52A2A;
 }
 
 .time-block {
-  font-size: 20px;
-  width: 150px;
-  color: red;
-  padding: 15px;
-  font-weight: normal;
+  font-size: 40px;
+  width: 100px;
+  color: #B8860B;
+  padding: 20px;
+  font-weight: bold;
   text-align: center;
 
 }
 
 button {
-  
+  margin-left:37px;
+  margin-bottom:20px;
+}
+
+.timerLine {
+  width:100%;
+  height:25px;
+  background-color:#A52A2A;
+  transition: 0.4s;
 }
